changes start new topic to ask question

--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -23,7 +23,7 @@
              <h2 class="page-header">Our mission</h2>
          </div>
          <div class="col-lg-12 about-desc about-main-desc">
-           <p >Onozor's mission is to provide a platform where knowledge can be easily shared around the world. Ranging from Rocket science and quantum physics to basic algebra, professionary culinary to home-cooking, history to Anthropoloy, etheism to extreme religion, and so on - as long as its knowledge people can gain from, then it should be shared.</p>
+           <p >Onozor provides a platform where knowledge can be easily shared around the world. Ranging from Rocket science and quantum physics to basic algebra, professionary culinary to home-cooking, history to Anthropoloy, etheism to extreme religion, and so on - as long as its knowledge people can gain from, then it should be shared.</p>
          </div>
       </div>
 
@@ -37,7 +37,7 @@
 
                <h3>We exist so you could ask questions and get answers
                </h3>
-               <p>Onozor's mission is to provide a platform where knowledge can be shared. In our different every day life, there have been times when questions hit us in ways we wish there was a mentor or professional (in that field) close to you. We are pushing towards a platform that will surround you with people with extensive knowledge of different fields and those willing to guide you through your research. </p>
+               <p>Onozor's most important goal is to simplify the process of asking questions and getting answers. In our different every day life, there have been times when questions hit us in ways we wish there was a mentor or professional (in that field) close to you. We are pushing towards a platform that will surround you with people with extensive knowledge of different fields and those willing to guide you through your research. </p>
            </div>
            <div class="col-lg-6 col-sm-6 about-desc">
 
@@ -48,7 +48,7 @@
            <div class="col-lg-6 col-sm-6 about-desc">
                <h3>Let the knowledge be documented. And free.
                </h3>
-               <p>Onozor's mission is to share and grow the world's knowledge. We want to democratize access to knowledge of all kinds—from politics to painting, cooking to coding, etymology to experiences—so if someone out there knows something, anyone else can learn it. Onozor makes it easy to get your questions answered, share your own knowledge, and browse the most interesting information people across the world want to share.</p>
+               <p>We hope to collaborate with the rest of the world share and grow the world's knowledge. We hope to make access to knowledge of all kinds—from politics to painting, cooking to coding, etymology to experiences really easy — so if someone out there knows something, anyone else can learn it. Onozor makes it encouraging to get your questions answered, share your own knowledge, and browse the most interesting information people across the world want to share.</p>
            </div>
            <div class="col-lg-6 col-sm-6 about-desc">
                <h3>Connect to friends. See what they love reading. And writing.
