--- a/app/views/comments/update_fail.js.erb
+++ b/app/views/comments/update_fail.js.erb
@@ -1,1 +1,1 @@
-alert("<%= @comment.errors.full_messages.to_sentence.html_safe %>");
+$.toaster({ priority : 'warning', message : "<%= @comment.errors.full_messages.to_sentence.html_safe %>"});
