--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -32,9 +32,11 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> <%= image_tag current_user.avatar.url(:thumb) %> <%=  current_user.username.titleize %></a>
           <ul class="dropdown-menu navbar-right">
-            <li><%= link_to "My Profile", user_path(current_user.username) %></li>
+            <li><%= link_to "<i class='fa fa-user'></i> My Profile".html_safe, user_path(current_user.username) %></li>
             <li role="separator" class="divider"></li>
-            <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
+            <li><%= link_to "<i class='fa fa-cog'></i> Settings".html_safe, edit_user_path(current_user.username) %></li>
+            <li role="separator" class="divider"></li>
+            <li><%= link_to "<i class='fa fa-sign-out'></i> Logout".html_safe, destroy_user_session_path, method: :delete %></li>
           </ul>
         </li>
         <% else %>
