--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -44,8 +44,7 @@
           <li><%= link_to "Login", new_user_session_path %></li>
         <% end %>
       </ul>
-
-      <%= link_to "Ask a question", new_question_path, class: 'btn  navbar-btn offset-2 topic-button pull-right'  %>
+      <a href="#"  class='btn  navbar-btn offset-2 topic-button pull-right' data-toggle="modal" data-target="#ask-question">Ask a question</a>
     </nav>
   </div>
 </nav>
