--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -1350,7 +1350,7 @@ a.down:hover {
     width: 704px;
 }
 
-.modal-body label {
+.category-modal label {
     text-align: center;
     overflow: hidden;
     position: relative;
@@ -1359,12 +1359,12 @@ a.down:hover {
     cursor: pointer;
 }
 
-.modal-body input {
+.category-modal input {
   position: absolute;
   display: none;
 }
 
-.modal-body img{
+.category-modal img{
     width: 104px;
     height: 104px;
     margin: 0px;
@@ -1762,4 +1762,30 @@ h3 {
   padding: 10px;
   width: 100%;
   letter-spacing: 1px;
+}
+
+#new_question  input{
+  display: block;
+}
+
+.errors-message {
+  display: none;
+  width: 200px;
+  text-align: center;
+  position: absolute;
+  background: url('error.png');
+  background-size: cover;
+  padding: 10px;
+  color: white;
+  font-size: 12px;
+  left: 562px;
+  top: 32px;
+  z-index: 10;
+  padding: 9px;
+}
+
+
+.form-modal input {
+    position: static;
+    display: block;
 }
