--- a/app/views/layouts/_modal.html.erb
+++ b/app/views/layouts/_modal.html.erb
@@ -1,3 +1,4 @@
+<div data-no-turbolink='true'>
 <!-- Modal -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" data-keyboard="false" data-backdrop="static">
   <div class="modal-dialog modal-lg" role="document">
@@ -66,4 +67,5 @@
         <% end %>
       </div>
   </div>
+</div>
 </div>
