--- a/app/views/answers/create.js.erb
+++ b/app/views/answers/create.js.erb
@@ -1,4 +1,4 @@
-<% publish_to "/questions/#{@answer.question.slug}" do %>
+<%# publish_to "/questions/#{@answer.question.slug}" do %>
   $('.post_form').val(" ");
   $('.answer-post').append("<%= escape_javascript(render(@answer)) %>");
-<% end %>
+<%# end %>
