--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,6 +5,7 @@
       <div class="col-lg-8 col-xs-9 col-sm-5 "> &copy; 2015 Onozor, Inc.</div>
       <div class="col-lg-3 col-xs-12 col-sm-5 sociconcent">
         <ul class="socialicons">
+          <li><%= link_to "<i class='fa fa-info-circle'></i> ABOUT".html_safe, about_path %></li>
           <li><a href="#"><i class="fa fa-facebook-square"></i></a></li>
           <li><a href="#"><i class="fa fa-twitter"></i></a></li>
           <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
