--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -22,9 +22,18 @@
 
 
       <ul class="nav navbar-nav navbar-left col-sm-offset-10">
-        <li><%= link_to "<i class='fa fa-list-alt'></i> HOME".html_safe, '/' %></li>
-       <li><%= link_to "<i class='fa fa-info-circle'></i> ABOUT".html_safe, about_path %></li>
-       <!-- <li><%#= link_to "<i class='fa fa-bell-o'></i> NOTIFICATIONS".html_safe %></li> -->
+        <ul class="nav navbar-nav navbar-left">
+          <% if user_signed_in? %>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class='fa fa-bell-o'></i><span class="badge badge-danger"><%= current_user.activities.count %></span></a>
+                <ul class="dropdown-menu navbar-right">
+                 <% @activities.each do |activities| %>
+                  <li><%=link_to activities.notifier_type, "#{activities.notifier_type.downcase}" %></li>
+                 <% end %>
+                </ul>
+              </li>
+          <% end %>
+        </ul>
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
