--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -1604,15 +1604,15 @@ h3 {
     -webkit-margin-end: 0px;
     font-weight: bold;
 }
-.center_col .list_header {
+.center_col.list_header {
     font-size: 11px;
     color: #666;
     text-transform: uppercase;
     letter-spacing: .5px;
     font-weight: bold;
-  //  padding-bottom: 8px;
+    padding-bottom: 8px;
   //  margin-bottom: 16px;
-  // border-bottom: 1px solid #e2e2e2;
+    border-bottom: 1px solid #e2e2e2;
 }
 .center_col {
     padding-top: 16px;
@@ -1826,5 +1826,9 @@ h3 {
     color: black;
     font-weight: bolder;
 }
-
-
+.feeds {
+    opacity: 1;
+    transition: opacity 2s ease-in-out;
+    -moz-transition: opacity 2s ease-in-out;
+    -webkit-transition: opacity 2s ease-in-out;
+}
