--- a/app/views/users/_users.html.erb
+++ b/app/views/users/_users.html.erb
@@ -7,19 +7,6 @@
             <button class="btn btn-default">search</button>
   <% end %>
   <div class="row">
-    <% for user in @user %>
-    <div class="col-md-3 user_outer">
-      <div class="user_middle">
-      <div class="user_inner">
-         <div class="litle-profile"><%=image_tag user.avatar.url(:thumb) %></div>
-       </div>
-       <div class="gen-content">
-         <p><%=link_to user.username, user %></p>
-         <p><small><%= user.intrest %></small></p>
-       </div>
-     </div>
-   </div>
-
-     <% end %>
+    <%= render "users_cards" %>
   </div>
 </div>
