--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -88,8 +88,10 @@
 }
 
 .user_middle {
-  width: 200px;
-  height: 180px;
+  //width: 200px;
+  //height: 180px;
+  width: 140px;
+  height: auto;
   padding: 10px;
   text-align: center;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
