user indexpage and notifiaction bugs

--- a/app/assets/stylesheets/questions.css.scss
+++ b/app/assets/stylesheets/questions.css.scss
@@ -1,375 +1,4 @@
-//// Place all the styles related to the questions controller here.
-//// They will automatically be included in application.css.
-//// You can use Sass (SCSS) here: http://sass-lang.com/
-//
-//#questions{
-//
-//}
-//
-//.favoured{
-//  color: gold;
-//  margin-left: 5px;
-//  margin-top: 10px;
-//  font-size: 30px;
-//  &:hover{
-//    -webkit-transform: rotate(180deg); /* Chrome, Safari, Opera */
-//    transform: rotate(180deg);
-//    -webkit-transition:  -webkit-transform 2s; /* For Safari 3.1 to 6.0 */
-//    transition: width 2s, height 2s, transform 2s;
-//  }
-//}
-//
-//.favourite-saved{
-//  margin-left: 5px;
-//  margin-top: 10px;
-//  font-size: 30px;
-//  &:hover{
-//    color: gold;
-//  }
-//}
-//
-//
-//
-//
-//
-//.flow{
-//  max-width: inherite;
-//  width: inherite;
-//  height: auto;
-//  margin-top: 10px;
-//  border: 1px solid #cdbfe3;
-//  color: black;
-//  padding:10px;
-//  overflow:hidden;
-//  position:relative;
-//  background-color: #FAFAFA;
-//  border-color: #e5e6e9 #dfe0e4 #d0d1d5;
-//  overflow: hidden;
-//}
-//
-//.votes{
-//   float:left;
-//   font-size:18px;
-//   font-wieght:bolder;
-//   h4, h5, a {
-//    line-hieght:0px;
-//    font-wieght:bolder;
-//    font-size:20px;
-//    text-align:center;
-//    margin:0px;
-//   }
-//}
-//
-//.bottom-side{
-//  position: relative;
-//  display: block;
-//
-//}
-//
-//.share{
-//  position:absolute;
-//  right: 2px;
-//}
-//
-//.favourite{
-//  position:absolute;
-//  right: -20px;
-//  top: 15px;
-//  font-size: 30px;
-//  color: gold;
-//  -webkit-transition:  -webkit-transform 2s; /* For Safari 3.1 to 6.0 */
-//  transition: width 2s, height 2s, transform 2s;
-//
-//  &:hover{
-//    -webkit-transform: rotate(180deg); /* Chrome, Safari, Opera */
-//    transform: rotate(180deg);
-//    -webkit-transition:  -webkit-transform 2s; /* For Safari 3.1 to 6.0 */
-//    transition: width 2s, height 2s, transform 2s;
-//  }
-//}
-//
-//
-//.favourites{
-// font-weight: bolder;
-//  margin-top: 10px;
-//  font-size: 20px;
-//
-//  margin-left: 770px;
-//  &:hover{
-//    -webkit-transform: rotate(180deg); /* Chrome, Safari, Opera */
-//    transform: rotate(180deg);
-//    -webkit-transition:  -webkit-transform 2s; /* For Safari 3.1 to 6.0 */
-//    transition: width 2s, height 2s, transform 2s;
-//  }
-//}
-//
-//.question-headlines{
-//  h4, p{
-//    margin:0px;
-//  }
-// }
-//
-//.profile-pix{
-//  width:70px;
-//  hieght:50px;
-//  float: right;
-//  border-radius: 5px;
-//  -moz-border-radius: 5px;
-//
-//}
-//
-//.follow-pix{
-//  border-radius: 5px;
-//  -moz-border-radius: 5px;
-//}
-//
-//.float{
-//  position: absolute;
-//  bottom: -0;
-//  right: 25px;
-//}
-//
-//.profile-area{
-//  position: relative;
-//}
-//
-//
-//
-//.ads{
-//  width: 100%;
-//  height: inherit;
-//}
-//
-//
-//
-//
-//
-//
-//.media-body h5{
-//  margin-bottom: 0px;
-//}
-//
-//.footer{
-//  position:relative;
-//  bottom:0;
-//  margin-top:200px;
-//  color:white;
-//a{
-//  color:white;
-//  text-shadow: 2px 3px 4px #0000ff;
-// }
-//}
-//
-//.tags{
-//  a{
-//   border:1px solid #ccc;
-//   padding:5px;
-//   margin: 5px;
-//   border-raduis:2px;
-//   background: #A18DC0;
-//   color: #fafafa;
-//  &:hover{
-//   text-decoration:none;
-//   }
-//  }
-//}
-//
-//
-//.right{
-//  text-align: right;
-//  float: right;
-//  text-shadow:2px 2px 4px #ccc;
-//  font-size: 30px;
-// }
-//
-//.vote-direction{
-//  height:50px;
-// }
-//
-//
-//
-// .user-info{
-//  float :right;
-//  background: #A18DC0;
-//  color: white;
-//  padding:6px;
-// img{
-//  float:left;
-//  margin-right:5px;
-//  width:32px;
-//  height:32px;
-//  }
-//
-//
-// }
-//
-//#error_explanation {
-//  width: 450px;
-//  border: 2px solid red;
-//  padding: 7px;
-//  padding-bottom: 0;
-//  margin-bottom: 20px;
-//  background-color: #f0f0f0;
-//  h2 {
-//    text-align: left;
-//    font-weight: bold;
-//    padding: 5px 5px 5px 15px;
-//    font-size: 12px;
-//    margin: -7px;
-//    margin-bottom: 0px;
-//    background-color: #c00;
-//    color: #fff;
-//  }
-//  ul li {
-//    font-size: 12px;
-//    list-style: square;
-//  }
-//}
-//
-//.container-center{
-//  margin-left: 100px;
-//}
-//
-//.lighter > small > a {
-//  color:rgba(116, 138, 199, 0.39);
-//}
-//
-//.lighter > a {
-//  color:rgba(116, 138, 199, 0.39);
-//}
-//
-//
-//.index-question{
-//  border-bottom: 1px solid #eaeaea;
-//  padding: 11px 0px;
-//  width: 730px;
-//  overflow: hidden;
-//  font-family: Trebuchet MS,Liberation Sans,DejaVu Sans,sans-serif;
-//}
-//
-//.index-question h4{
-//  font-family: Trebuchet MS,Liberation Sans,DejaVu Sans,sans-serif;
-//}
-//
-//.vote{
-//  float: left;
-//  padding: 10px;
-//  margin-left: 10px;
-//  text-align: center;
-//  max-height: 50px;
-//
-//}
-//
-//.asker-details {
-//  float: right;
-//  text-align: left;
-//  margin-right: 42px;
-//}
-//
-//.vote p{
-//  line-height: 19px;
-//  font-weight: bolder ;
-//  text-shadow: 1px 1px 1px inset #ccc;
-//  width: 40px ;
-//}
-//
-//
-//.views{
-//  float: left;
-//  padding: 10px;
-//  margin-left: 10px;
-//  text-align: center;
-//
-//  max-height: 50px;
-//
-//}
-//
-//.views p{
-//
-//  line-height: 19px;
-//  font-weight: bolder ;
-//  text-shadow: 1px 1px 1px inset #ccc;
-//  width: 40px ;
-//  font-size: 13px;
-//}
-//
-//.answer-box{
-//  float: left;
-//  padding: 10px;
-//  margin-left: 10px;
-//  text-align: center;
-//  color: #ffffff;
-//  max-height: 50px;
-//  max-width: 70px;
-//  font-size: 13px;
-//}
-//
-//.answer-box p{
-//  color: #090A42;
-//  line-height: 19px;
-//  font-weight: bolder ;
-//  text-shadow: 1px 1px 1px inset #ccc;
-//  font-size: 13px;
-//
-//
-//}
-//
-//.answer-box p:first-letter{
-//  height: 25px;
-//  font-size: 160%;
-//  font-weight: normal;
-//}
-//
-//.tag-index a {
-//  padding: 5px;
-//  margin: 15px 10px 0px 0px;
-//  background: #675387;
-//  color: #fafafa;
-//  position: relative;
-//  top: 10px;
-//  border-bottom: 1px solid #a0a0a0;
-//  border-left: 1px solid #a0a0a0;
-//  font-size: 90%;
-//  white-space: nowrap;
-//}
-//
-//
-//.post_form{
-//  height: 900px;
-//  border-radius: 0px;
-//}
-//
-//.form-header{
-//  width: 100%;
-//  border: 1px solid #CCCCCC;
-//  border-bottom: none;
-//  nav {
-//    padding: 10px;
-//    a{
-//      padding: 10px;
-//    }
-//  }
-//}
-//
-//.editing-help{
-//  width: 100%;
-//  background: #FFF7E5;
-//  height: 200px;
-//  display: none;
-//  padding: 10px;
-//}
-//
-//.border-settings{
-//  border: 1px solid #F5F5F5;
-//}
-//
-//
-//.posting{
-//  float: right;
-//  font-weight: bolder;
-//  color: cornflowerblue;
-//  display: none;
-//}
+
 
 .clear-top{
   margin-top: 50px;
@@ -395,5 +24,23 @@
 		text-decoration: none;
 		color: white;
 	}
+}
+
+.greetings {
+  background-image: url('greetings.png');
+  width: 100% !important;
+  padding: 30px;
+  background-size:  100%;
+  background-repeat: no-repeat;
+  h1 {
+    font-family: 'Open Sans', sans-serif;
+    color: black;
+    text-align: center;
+    margin-top: 50px;
+    font-size: 20px;
+  }
+  p {
+    text-align: center;
+  }
 }
 
