--- a/app/views/layouts/_rightside.html.erb
+++ b/app/views/layouts/_rightside.html.erb
@@ -18,7 +18,7 @@
   <% if current_user %>
   <% if @people_to_follows %>
     <div class="sidebarblock">
-      <h3>People you may Like</h3>
+      <h3><i class="fa fa-users"></i> People you may Like</h3>
       <div class="divline"></div>
       <div class="blocktxt">
 
