--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -17,6 +17,12 @@
 //= require_tree .
 
 
+$(document).on('ready page:load', function () {
+  $('#get-notification').click( function(){
+    $('.notification-bed').load('/activities #note')
+  });
+});
+
 $(function() {
   $('#question_tag_list').tokenInput('/alltags.json', {
     crossDomain: false,
