--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -94,7 +94,11 @@
   /*}*/
 
 
-
+.alex {
+    width: 100%;
+    height: 100%;
+    background: url('http://forbetterweb.com/html/hybrid/1.4/img/header.jpg');
+}
 
 
 
