--- a/app/views/activities/comment/_create.html.erb
+++ b/app/views/activities/comment/_create.html.erb
@@ -6,7 +6,7 @@
          </p>
      <% end %>
   <% else %>
-      <%= link_to question_path(activity.trackable.commentable.question) do %>
+      <%= link_to question_path(activity.trackable.commentable.question,  notification_id: activity.id) do %>
           <p>
             <strong><%=  activity.trackable.user.fullname.humanize  %></strong> commented on your answer to <strong><%=  activity.user.fullname.humanize + "'s" %></strong> question. <br />
             <i class="fa fa-comment"></i> <small><%= time_ago_in_words activity.created_at, class:'small' %></small>
