--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -25,6 +25,12 @@
 </head>
 <body class="login">
   <div class="bg_container">
+    <% flash.each do |key, value| %>
+        <div class="<%= flash_class(key) %>">
+          <%= value %>
+          <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+        </div>
+    <% end %>
     <div align="center"><%= image_tag ('logo-small.png') %><p class="slogan">The best answer to any question</p></div>
    <div class="holder">
     <div class="login-form">
