Add functionalities on page

--- a/app/views/answers/destroy.js.erb
+++ b/app/views/answers/destroy.js.erb
@@ -1,1 +1,1 @@
-$("#<%= dom_id(@answer) %>").replaceWith(" ");
+$("#<%= dom_id(@answer) %>, #page-question-answer-<%= @answer.id %>").replaceWith(" ");
