--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,10 +25,9 @@
 
   <!--<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>-->
 </head>
-<body>
+<body class="">
 
 <div class="container-fluid">
-
   <%= render :partial => 'layouts/nav' %>
   <section class="content">
     <% if request.path != '/about' %>
